--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Reservia</title>
+   <!-- Google Font - Raleway -->
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+   <!-- Font Awesome -->
+   <script src="https://kit.fontawesome.com/1ac517afc1.js" crossorigin="anonymous"></script>
 </head>
 <body>
    <header>
@@ -269,13 +274,13 @@
    
       <section class="activites">
          <div class="container">
-            <h2 class="activites__titre"></h2>
+            <h2 class="activites__titre">Activités à Marseille</h2>
             <div class="activites__activites">
                <div class="row"> <!-- Faire la même chose mais en column -->
                   <div class="col-md-3">
                      <div class="card-activite">
                         <div class="card-activite__image">
-                           <img src="" alt="Vieux Port">
+                           <img src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
                         </div>
                         <div class="card-activite__meta">
                            <h3 class="card-activite__meta__titre">Vieux Port</h3>
