Création de l'environnement CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
    <!-- Font Awesome -->
    <script src="https://kit.fontawesome.com/1ac517afc1.js" crossorigin="anonymous"></script>
+   <!-- Styles CSS -->
+   <link href="/css/utilities.css" rel="stylesheet">
+   <link href="/css/structure.css" rel="stylesheet">
+   <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
    <header>
